# gcp-serverless-e2e-data-platform

01_ingestion/: .gitignore  main.py  pyproject.toml  requirements.txt
01_ingestion/src/: config.py  generator.py  ingestion.py  publisher.py
01_ingestion/src/queries/: customer.sql  default.sql
02_transformation/: .dockerignore  .gitignore  Dockerfile  build_log.txt  catalogs.yml  dbt_project.yml  profiles.yml  pyproject.toml
02_transformation/macros/: generate_schema_name.sql
02_transformation/models/: docs.md
02_transformation/models/bronze/: sources.yml
02_transformation/models/gold/: obt_sales.sql
02_transformation/models/gold/dimension/dim_calendar/: dim_calendar.md  dim_calendar.sql  dim_calendar.yml
02_transformation/models/silver/: customer_test.sql
02_transformation/models/silver/dimension/: dim_calendar.sql  dim_customer.sql
02_transformation/models/silver/fact/: fact_cost.sql  fact_margin.sql  fact_revenue.sql  fact_tpv.sql
02_transformation/models/silver/staging/: stg_customer.sql  stg_lineitem.sql  stg_nation.sql  stg_orders.sql  stg_part.sql  stg_partsupp.sql  stg_region.sql  stg_supplier.sql
03_reporting/: .gitignore  main.py  pyproject.toml
03_reporting/src/: config.py  metrics.py  query.py  renderer.py
03_reporting/templates/: report.html
04_orchestration/: ingestion.yaml  transformation-master.yaml
infrastructure/: .gitignore  apis.tf  bigquery.tf  cloudfunction.tf  data_catalog.tf  iam.tf  outputs.tf  pubsub.tf  registry.tf  storage.tf  transformation.tf  variables.tf  workflows.tf
(+29 files in other folders)
