[project]
name = "tpch-pubsub-generator"
version = "0.1.0"
description = "TPC-H data generator for Pub/Sub ingestion"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "google-cloud-pubsub>=2.23.0",
    "functions-framework>=3.0.0",
    "flask>=3.0.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
